# AirQualityMonitor

./: CMakeLists.txt  README.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  requirements.txt
doc/: _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_air_quality_monitor__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_air_quality_monitor__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_8d.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_air_quality_monitor__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_air_quality_monitor__autogen_2include_2ui__mainwindow_8h.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_air_quality_monitor__autogen_2include_2ui__mainwindow_8h_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_air_quality_monitor__autogen_2moc__predefs_8h.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_air_quality_monitor__autogen_2moc__predefs_8h_source.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_air_quality_monitor__autogen_2mocs__compilation_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_debug_2_c_make_files_23_830_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_release_2_air_quality_monitor__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.html  _desktop___qt__6__9__0___min_g_w__64__bit-_release_2_air_quality_monitor__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_8d.html  annotated.html  class_main_window.html  (+72 more)
(+91 files in other folders)
